feat: add configurable tile encoding
